For the latest news, visit the Linux Cafe at the PegaSoft web site. 

SparForte 2.0.2's focus was bug fixes for SparForte 2.0.1

CHANGES SINCE 2.0.1

1. Fix: When the verbose option is used, Berkeley DB verbose options are enabled for DB_VERB_BACKUP, DB_VERB_DEADLOCK, DB_VERB_FILEOPS, DB_VERB_WAITSFOR.

2. Fix: If btree_io.create fails to create a file, an exception is no longer raised when truncate is attempted.

3. Fix: Dynamic memory within resource handles is freed and files closed prior to deallocation the resource handle.  Fixed order of deallocation to eliminate storage_error for btree freed handles.

4. Fix: In web templates, scripts tags are no longer run if a previous error occurred.  The error flag is not reset either, so errors will appear in the browser window.

5. Fix: btree_io.remove no longer throws an exception when a cursor isn't used (uninitialized variable).  It no longer tries to remove the environment.

6. Fix: btree_io cursors and files no longer give a constant expected message in test phase mode.

7. Change: text templates no longer show error messages on a single line.  Other templates remain unchanged.

8. New: third party tests added to "make releasetest".  First is btree_io positive tests.

9. Fix: exception handlers in inner blocks no longer run when an error occurs in the outer block.

10. Fix: strings.trim end parameter is now optional, as in the documentation.

11. Fix: btree_io cursors no longer raise storage_error if the cursor was in wrong open/close state.  Appropriate error message given.

12. Fix: btree_io files no longer raise storage_error if the file was in wrong open/close state.  Appropriate error message given.

13. Fix: btree_io, doubly lists, dht's (and unfinished vectors package) no longer raise a constraint error if the generic is not initialized with a "new_" function.
